src/program/latex/snapshots/quil_rs__program__latex__tests__gates__gates_h_and_cnot_ctrl_1_targ_0.snap
---
source: src/program/latex/mod.rs
assertion_line: 588
expression: "r#\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{0}}} & \\qw & \\targ{} & \\qw \\\\\n\\lstick{\\ket{q_{1}}} & \\gate{H} & \\ctrl{-1} & \\qw\n\\end{tikzcd}\n\\end{document}\"#"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{0}}} & \qw & \targ{} & \qw \\
\lstick{\ket{q_{1}}} & \gate{H} & \ctrl{-1} & \qw
\end{tikzcd}
\end{document}
