src/program/latex/snapshots/quil_rs__program__latex__tests__gates__gates_phase_pi_rotation.snap
---
source: src/program/latex/mod.rs
assertion_line: 827
expression: "r#\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{0}}} & \\phase{\\pi} & \\qw\n\\end{tikzcd}\n\\end{document}\"#"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{0}}} & \phase{\pi} & \qw
\end{tikzcd}
\end{document}
