src/program/latex/snapshots/quil_rs__program__latex__tests__gates__text_gates_x_and_y_single_qubit.snap
---
source: src/program/latex/mod.rs
assertion_line: 366
expression: "r\"\\documentclass[convert={density=300,outext=.png}]{standalone}\n\\usepackage[margin=1in]{geometry}\n\\usepackage{tikz}\n\\usetikzlibrary{quantikz}\n\\begin{document}\n\\begin{tikzcd}\n\\lstick{\\ket{q_{0}}} & \\gate{X} & \\gate{Y} & \\gate{Z} & \\qw \\\\\n\\end{tikzcd}\n\\end{document}\".to_string()"
---
\documentclass[convert={density=300,outext=.png}]{standalone}
\usepackage[margin=1in]{geometry}
\usepackage{tikz}
\usetikzlibrary{quantikz}
\begin{document}
\begin{tikzcd}
\lstick{\ket{q_{0}}} & \gate{X} & \gate{Y} & \gate{Z} & \qw \\
\end{tikzcd}
\end{document}
